Added forgot password functionality, Error handling needs to be doen

--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -27,7 +27,7 @@
     </div>
 </div>
 <button ion-button full text-capitalize (click)="login()" id="login" [disabled]="loginForm.invalid">Login</button>
-<label class="label1" click="navigateToPage('RegisterPage')">Wachtwoord vergeten</label>
+<label class="label1" (click)="navigateToPage('ForgotPasswordPage')">Wachtwoord vergeten</label>
 <label class="label2">Registreer nu!</label>
 </form>
 
