--- a/src/components/login-form/login-form.component.scss
+++ b/src/components/login-form/login-form.component.scss
@@ -3,7 +3,7 @@ ion-input {
     background-color: hsla(191, 86%, 54%, 0.342);
     color: #2b373a;
     width:100%;
-    padding:7px;
+    padding:2px;
     margin-top: 10px;
 }
 
@@ -13,9 +13,12 @@ div .inputs {
     align-content: center;
     margin-top: 20%;
 }
+label{
+    color: #22caf4;
+}
 .label1{
     margin-top: 10px;
-    color: #22caf4;
+    
     text-align: left;
     float: left;
 
@@ -23,11 +26,10 @@ div .inputs {
 }
 .label2 {
     margin-top: 10px;
-    color: #22caf4;
     text-align: right;
     float: right;
 }
-.button{
+#login{
     margin-top: 10px;
 }
 
