Social sharing functionality (not working)

--- a/src/pages/show-quotes/show-quotes.scss
+++ b/src/pages/show-quotes/show-quotes.scss
@@ -10,4 +10,8 @@ page-show-quotes {
         border-radius: 10px;
         quotes: "\0022" "\0022";
       }
+      #share-button {
+          width: 20%;
+          float:left;
+      }
 }
