--- a/src/pages/show-quotes/show-quotes.scss
+++ b/src/pages/show-quotes/show-quotes.scss
@@ -14,4 +14,107 @@ page-show-quotes {
           width: 20%;
           float:left;
       }
-}
+
+      .w3-light-grey, .w3-hover-light-grey:hover, .w3-light-gray, .w3-hover-light-gray:hover {
+        color: #000!important;
+        background-color: #f1f1f1!important;
+    }
+    .w3-leftbar {
+        border-left: 6px solid #ccc!important;
+    }
+    .w3-panel {
+        margin-top: 16px;
+        margin-bottom: 16px;
+    }
+    .w3-container, .w3-panel {
+        padding: 0.01em 16px;
+    }
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+    div {
+        display: block;
+    }
+    .w3-white, .w3-hover-white:hover {
+        color: #000!important;
+        background-color: #fff!important;
+    }
+    .w3-light-grey, .w3-hover-light-grey:hover, .w3-light-gray, .w3-hover-light-gray:hover {
+        color: #000!important;
+        background-color: #f1f1f1!important;
+    }
+    html, body {
+        font-family: Verdana,sans-serif;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+    html, body {
+        font-family: Verdana,sans-serif;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+    html {
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+    }
+
+    .w3-container:after, .w3-container:before, .w3-panel:after, .w3-panel:before, .w3-row:after, .w3-row:before, .w3-row-padding:after, .w3-row-padding:before, .w3-cell-row:before, .w3-cell-row:after, .w3-clear:after, .w3-clear:before, .w3-bar:before, .w3-bar:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+    .w3-container:after, .w3-container:before, .w3-panel:after, .w3-panel:before, .w3-row:after, .w3-row:before, .w3-row-padding:after, .w3-row-padding:before, .w3-cell-row:before, .w3-cell-row:after, .w3-clear:after, .w3-clear:before, .w3-bar:before, .w3-bar:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+    .w3-xlarge {
+        font-size: 24px!important;
+    }
+
+    .w3-serif {
+        font-family: serif;
+    }
+
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+    p {
+        display: block;
+        -webkit-margin-before: 1em;
+        -webkit-margin-after: 1em;
+        -webkit-margin-start: 0px;
+        -webkit-margin-end: 0px;
+    }
+    .w3-light-grey, .w3-hover-light-grey:hover, .w3-light-gray, .w3-hover-light-gray:hover {
+        color: #000!important;
+        background-color: #f1f1f1!important;
+    }
+    html, body {
+        font-family: Verdana,sans-serif;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+    html, body {
+        font-family: Verdana,sans-serif;
+        font-size: 15px;
+        line-height: 1.5;
+    }
+    html {
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%;
+    }
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+    *, *:before, *:after {
+        box-sizing: inherit;
+    }
+    
+    }
