Working profile page functionality

--- a/src/components/login-form/login-form.component.html
+++ b/src/components/login-form/login-form.component.html
@@ -25,6 +25,6 @@
 </div>
 <button ion-button full text-capitalize (click)="login()" id="login" [disabled]="loginForm.invalid">Login</button>
 <label class="label1" (click)="navigateToPage('ForgotPasswordPage')">Wachtwoord vergeten</label>
-<label class="label2">Registreer nu!</label>
+<label class="label2" (click)="navigateToPage('RegisterPage')">Registreer nu!</label>
 </form>
 
