--- a/src/components/profile-view/profile-view.component.html
+++ b/src/components/profile-view/profile-view.component.html
@@ -19,7 +19,7 @@
       <ion-input [value]="userProfile.lastName" [readonly]=true></ion-input>
     </ion-item>
     <ion-item>
-        <ion-label floating>Voornaam</ion-label>
+        <ion-label floating>Geboortedatum</ion-label>
         <ion-input [value]="userProfile.dateOfBirth" [readonly]=true></ion-input>
       </ion-item>
   </ion-card-content>
