--- a/src/components/login-form/login-form.component.scss
+++ b/src/components/login-form/login-form.component.scss
@@ -6,7 +6,10 @@ ion-input {
     padding:2px;
     margin-top: 10px;
 }
-
+ion-input {
+    background-color: #3ec8fa;
+    color: white;
+}
 
 div .inputs {
     text-align: center;
@@ -32,4 +35,5 @@ label{
 #login{
     margin-top: 10px;
 }
+
 
