--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -7,4 +7,7 @@ page-forgot-password {
         width: 150px;
         height: 150px;
     }
+    ion-header {
+        background-color:#00b7ff;
+    }
 }
