--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -10,4 +10,7 @@ page-forgot-password {
     ion-header {
         background-color:#00b7ff;
     }
+    .container {
+        background-color: #002137;
+    }
 }
