--- a/src/pages/home2/home2.scss
+++ b/src/pages/home2/home2.scss
@@ -1,1 +1,11 @@
-page-home {}
+    p {
+        display: block;
+        -webkit-margin-before: 1em;
+        -webkit-margin-after: 1em;
+        -webkit-margin-start: 0px;
+        -webkit-margin-end: 0px;
+    }
+    .w3-pale-blue, .w3-hover-pale-blue:hover {
+        color: #000!important;
+        background-color: #ddffff!important;
+    }
