--- a/src/pages/register/register.scss
+++ b/src/pages/register/register.scss
@@ -4,4 +4,7 @@ page-register {
         height: 150px;
         display: block;
     }
+    .container {
+        background-color: #002137;
+    }
 }
