--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,6 +2,25 @@ img {
     width: 100%;
     margin: 0 auto;
     display: block;
-    height: 33%;
     margin-bottom: 3px;
+}
+
+div .image-container {
+    position: relative;
+    text-align: center;
+    color: white;
+    height: 33%;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    margin-bottom: 25px;
+}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 24px;
+
 }
