--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,9 +22,12 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 // Use the primary color as the background for the toolbar-md-background
-$toolbar-md-background:    rgb(17, 40, 71);
 
-$text-input-highlight-color-valid : rgb(176, 16, 16);
+.container { 
+  background-color: #002137;
+}
+$toolbar-md-background:    #002137;
+
 
 input::-webkit-input-placeholder {
   color: rgb(255, 255, 255) !important;
@@ -42,9 +45,7 @@ input::-webkit-input-placeholder {
   color: rgb(255, 255, 255) !important;  
   }
 
-  .container { 
-    background-color: rgb(17, 40, 71);
-  }
+
 
 
 // Named Color Variables
