--- a/src/components/profile-view/profile-view.component.html
+++ b/src/components/profile-view/profile-view.component.html
@@ -27,4 +27,4 @@
 
 </div>
 
-<button ion-button block color="danger" (click)="signOut()">Uitloggen</button>
+<button padding block ion-button text-center color="danger" (click)="signOut()">Uitloggen</button>
