--- a/src/components/profile-view/profile-view.component.scss
+++ b/src/components/profile-view/profile-view.component.scss
@@ -1,4 +1,4 @@
-
+app-profile-view {
     .profile-view__image-container {
         background-color: #54D3BF;
         height: 220px;
@@ -8,4 +8,8 @@
         height: 200px;
         width: 200px;
         max-height: 200px;
+    }
+    button {
+        width: 100%;
+    }
     }
