--- a/src/pages/show-quotes/show-quotes.scss
+++ b/src/pages/show-quotes/show-quotes.scss
@@ -10,9 +10,8 @@ page-show-quotes {
         border-radius: 10px;
         quotes: "\0022" "\0022";
       }
-      #share-button {
-          width: 20%;
-          float:left;
+      .dark {
+          background-color: transparent;
       }
 
       .w3-light-grey, .w3-hover-light-grey:hover, .w3-light-gray, .w3-hover-light-gray:hover {
@@ -117,4 +116,8 @@ page-show-quotes {
         box-sizing: inherit;
     }
     
+    }
+
+    ion-item {
+        background-color: transparent;
     }
